--- a/GerberDataViewer/mainwindow.ui
+++ b/GerberDataViewer/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -45,15 +45,25 @@
      <attribute name="title">
       <string>Tab 2</string>
      </attribute>
+     <widget class="QTextEdit" name="textEditPreview">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>601</width>
+        <height>481</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>70</y>
+      <y>130</y>
       <width>121</width>
-      <height>461</height>
+      <height>401</height>
      </rect>
     </property>
     <property name="widgetResizable">
@@ -65,7 +75,7 @@
        <x>0</x>
        <y>0</y>
        <width>119</width>
-       <height>459</height>
+       <height>399</height>
       </rect>
      </property>
      <widget class="QWidget" name="verticalLayoutWidget">
@@ -106,13 +116,23 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>80</y>
       <width>121</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Open File</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEditFilename">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
