--- a/GerberViewer/GerberViewerGUIinQT/GerberViewer/mainwindow.ui
+++ b/GerberViewer/GerberViewerGUIinQT/GerberViewer/mainwindow.ui
@@ -49,12 +49,31 @@
       <property name="geometry">
        <rect>
         <x>529</x>
-        <y>9</y>
+        <y>49</y>
         <width>191</width>
-        <height>321</height>
+        <height>281</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_4"/>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>529</x>
+        <y>9</y>
+        <width>191</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QPushButton" name="LoadGerberFile">
+         <property name="text">
+          <string>Load</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
