--- a/GerberViewer/GerberViewerGUIinQT/GerberViewer/mainwindow.ui
+++ b/GerberViewer/GerberViewerGUIinQT/GerberViewer/mainwindow.ui
@@ -45,9 +45,9 @@
       <property name="geometry">
        <rect>
         <x>950</x>
-        <y>20</y>
+        <y>397</y>
         <width>191</width>
-        <height>58</height>
+        <height>81</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -59,7 +59,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="generate_button">
          <property name="text">
           <string>Generate</string>
          </property>
@@ -87,9 +87,9 @@
       <property name="geometry">
        <rect>
         <x>950</x>
-        <y>460</y>
+        <y>550</y>
         <width>191</width>
-        <height>131</height>
+        <height>72</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -115,7 +115,7 @@
       <property name="geometry">
        <rect>
         <x>950</x>
-        <y>88</y>
+        <y>19</y>
         <width>189</width>
         <height>361</height>
        </rect>
@@ -125,7 +125,7 @@
       <property name="geometry">
        <rect>
         <x>961</x>
-        <y>99</y>
+        <y>30</y>
         <width>161</width>
         <height>21</height>
        </rect>
@@ -138,7 +138,7 @@
       <property name="geometry">
        <rect>
         <x>960</x>
-        <y>140</y>
+        <y>71</y>
         <width>171</width>
         <height>25</height>
        </rect>
@@ -151,7 +151,7 @@
       <property name="geometry">
        <rect>
         <x>960</x>
-        <y>120</y>
+        <y>51</y>
         <width>171</width>
         <height>16</height>
        </rect>
@@ -164,7 +164,7 @@
       <property name="geometry">
        <rect>
         <x>963</x>
-        <y>200</y>
+        <y>131</y>
         <width>71</width>
         <height>31</height>
        </rect>
@@ -174,7 +174,7 @@
       <property name="geometry">
        <rect>
         <x>965</x>
-        <y>181</y>
+        <y>112</y>
         <width>70</width>
         <height>20</height>
        </rect>
@@ -187,7 +187,7 @@
       <property name="geometry">
        <rect>
         <x>1052</x>
-        <y>178</y>
+        <y>109</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -200,7 +200,7 @@
       <property name="geometry">
        <rect>
         <x>1050</x>
-        <y>200</y>
+        <y>131</y>
         <width>71</width>
         <height>31</height>
        </rect>
@@ -210,7 +210,7 @@
       <property name="geometry">
        <rect>
         <x>970</x>
-        <y>240</y>
+        <y>171</y>
         <width>91</width>
         <height>23</height>
        </rect>
@@ -223,7 +223,7 @@
       <property name="geometry">
        <rect>
         <x>970</x>
-        <y>360</y>
+        <y>291</y>
         <width>151</width>
         <height>23</height>
        </rect>
@@ -236,7 +236,7 @@
       <property name="geometry">
        <rect>
         <x>1052</x>
-        <y>388</y>
+        <y>319</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -249,7 +249,7 @@
       <property name="geometry">
        <rect>
         <x>963</x>
-        <y>410</y>
+        <y>341</y>
         <width>71</width>
         <height>31</height>
        </rect>
@@ -259,7 +259,7 @@
       <property name="geometry">
        <rect>
         <x>965</x>
-        <y>391</y>
+        <y>322</y>
         <width>70</width>
         <height>20</height>
        </rect>
@@ -272,7 +272,7 @@
       <property name="geometry">
        <rect>
         <x>1050</x>
-        <y>410</y>
+        <y>341</y>
         <width>71</width>
         <height>31</height>
        </rect>
@@ -282,7 +282,7 @@
       <property name="geometry">
        <rect>
         <x>960</x>
-        <y>340</y>
+        <y>271</y>
         <width>171</width>
         <height>16</height>
        </rect>
@@ -295,7 +295,7 @@
       <property name="geometry">
        <rect>
         <x>963</x>
-        <y>299</y>
+        <y>230</y>
         <width>71</width>
         <height>31</height>
        </rect>
@@ -305,7 +305,7 @@
       <property name="geometry">
        <rect>
         <x>965</x>
-        <y>280</y>
+        <y>211</y>
         <width>91</width>
         <height>20</height>
        </rect>
@@ -325,6 +325,39 @@
       </property>
       <property name="text">
        <string/>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="savePath">
+      <property name="geometry">
+       <rect>
+        <x>950</x>
+        <y>510</y>
+        <width>189</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="html">
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;~/temp/generated.BRD &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>950</x>
+        <y>490</y>
+        <width>70</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Save Path</string>
       </property>
      </widget>
     </widget>
