--- a/GerberViewer/GerberViewerGUIinQT/GerberViewer/mainwindow.ui
+++ b/GerberViewer/GerberViewerGUIinQT/GerberViewer/mainwindow.ui
@@ -28,7 +28,7 @@
     </property>
     <widget class="QWidget" name="tab_1">
      <attribute name="title">
-      <string>Tab 1</string>
+      <string>PCB Preview</string>
      </attribute>
      <widget class="QWidget" name="horizontalLayoutWidget">
       <property name="geometry">
@@ -363,7 +363,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
-      <string>Tab 2</string>
+      <string>Feeders</string>
      </attribute>
      <widget class="QTableWidget" name="FeederTable">
       <property name="geometry">
@@ -445,7 +445,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
     </widget>
     <widget class="QWidget" name="tab">
      <attribute name="title">
-      <string>Page</string>
+      <string>Mount Positions</string>
      </attribute>
      <widget class="QTableWidget" name="pos_table">
       <property name="geometry">
